packages/taquito-michel-codec/test/contracts_015/ill_typed/dup0.tz
parameter unit;
storage unit;
code { DUP 0 }
